Consistent Fonts across Computers: Font Folder Created

--- a/Games.html
+++ b/Games.html
@@ -8,6 +8,7 @@
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <title>Featured Game - 2048 </title>
     <link rel="icon" href="Images/icon png.png">
+    <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
     <link href="CSS/game_css.css" rel="stylesheet" type="text/css" media="screen">
     <!--<link href="CSS/common.css" rel="stylesheet" type="text/css" media="screen">-->
 
