--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
     <script src="JS/jquery.js"></script>
     <script src="JS/main2.js"></script>
     <meta charset="UTF-8">
