Responsive Design on Homepage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Hi, I'm Li</title>
     <link rel="icon" href="Images/icon png.png">
     <link href="CSS/styles2.css" rel="stylesheet" type="text/css" media="screen">
-    <link href="CSS/common.css" rel="stylesheet" type="text/css" media="screen">
+    <!--<link href="CSS/common.css" rel="stylesheet" type="text/css" media="screen">-->
 </head>
 
 <body id="bod">
@@ -32,6 +32,20 @@
         </ul>
     </nav>
 </div>
+
+<div id="top_mobile_nav">
+    <img id="navicon" src="Images/navicon.png" height="50px" width="50px" >
+</div>
+
+<ul id="mobile_nav">
+    <a href="index.html">HOME</a>
+    <a href="Bio.html">ABOUT</a>
+    <a href="Resume.html">RESUME</a>
+    <a href="Graphic Design.html">GRAPHIC DESIGN</a>
+    <a id="nav_projz" href="Projects.html">PROJECTS</a>
+    <a href="Games.html">GAMES</a>
+    <a id="nav_last" href="Contacts.html">CONTACT</a>
+</ul>
 
 <div id="bg">
     <img src="Images/cover_png2.png">
