Mobile Dropdown Menu Refined

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 
 <ul id="mobile_nav">
-    <a href="index.html">HOME</a>
+    <a id="nav_fist" href="index.html">HOME</a>
     <a href="Bio.html">ABOUT</a>
     <a href="Resume.html">RESUME</a>
     <a href="Graphic Design.html">GRAPHIC DESIGN</a>
