Projcts and Bio Now Responsive

--- a/Projects.html
+++ b/Projects.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
     <script src="JS/jquery.js"></script>
     <script src="JS/common_jquery.js"></script>
@@ -34,6 +35,20 @@
         </ul>
     </nav>
 </div>
+
+<div id="top_mobile_nav">
+    <img id="navicon" src="Images/navicon.png" height="50px" width="50px" >
+</div>
+
+<ul id="mobile_nav">
+    <a id="nav_fist" href="index.html">HOME</a>
+    <a href="Bio.html">ABOUT</a>
+    <a href="Resume.html">RESUME</a>
+    <a href="Graphic Design.html">GRAPHIC DESIGN</a>
+    <a id="nav_projz" href="Projects.html">PROJECTS</a>
+    <a href="Games.html">GAMES</a>
+    <a id="nav_last" href="Contacts.html">CONTACT</a>
+</ul>
 
 <div id = "typography">
 </div>
