--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Hi, I'm Li</title>
     <link rel="icon" href="Images/icon png.png">
     <link href="CSS/styles2.css" rel="stylesheet" type="text/css" media="screen">
-    <!--<link href="CSS/common.css" rel="stylesheet" type="text/css" media="screen">-->
+    <link href="CSS/common.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
 <body id="bod">
