Contacts and 2048 Now Responsive

--- a/Contacts.html
+++ b/Contacts.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
     <script src="JS/jquery.js"></script>
     <script src="JS/common_jquery.js"></script>
@@ -35,16 +36,39 @@
     </nav>
 </div>
 
+<div id="top_mobile_nav">
+    <img id="navicon" src="Images/navicon.png" height="50px" width="50px" >
+</div>
+
+<ul id="mobile_nav">
+    <a id="nav_fist" href="index.html">HOME</a>
+    <a href="Bio.html">ABOUT</a>
+    <a href="Resume.html">RESUME</a>
+    <a href="Graphic Design.html">GRAPHIC DESIGN</a>
+    <a id="nav_projz" href="Projects.html">PROJECTS</a>
+    <a href="Games.html">GAMES</a>
+    <a id="nav_last" href="Contacts.html">CONTACT</a>
+</ul>
+
 <div id = "title_">
     <h1 id = "nah">Let's Talk.</h1>
 </div>
 
 <div id = "phone">
     <img id = "p_icon" src="Images/phone2.png">
+    <div id="phone_mobile">
+        <img src="Images/phone.png">
+        <h2>(347) 925 - 9401</h2>
+    </div>
 </div>
 
 <div id="email">
     <img id = "e_icon" src="Images/email2.png">
+    <div id="email_mobile">
+        <img src="Images/email3.png">
+        <h2>ljw9801055@gmail.com </h2>
+        <h2>lij30@rpi.edu</h2>
+    </div>
 </div>
 
 
