--- a/Projects.html
+++ b/Projects.html
@@ -63,7 +63,7 @@
         </div>
         <div id="col1_item2">
             <h2>2048 Game</h2>
-            <p>A reimagination of the popular 2048 mobile game, completely programmed from scratch using ReactJS. </p>
+            <p>A reimagination of the popular 2048 mobile game, completely reverse-engineered from scratch using ReactJS. </p>
             <a href="Games.html">View project</a>
             <img src="Images/proj5.png">
         </div>
