FRC Now Responsive & Moved Pics from CSS to Img

--- a/proj_frc.html
+++ b/proj_frc.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
     <script src="JS/jquery.js"></script>
     <script src="JS/frc_js.js"></script>
@@ -35,6 +36,20 @@
     </nav>
 </div>
 
+<div id="top_mobile_nav">
+    <img id="navicon" src="Images/navicon.png" height="50px" width="50px" >
+</div>
+
+<ul id="mobile_nav">
+    <a id="nav_fist" href="index.html">HOME</a>
+    <a href="Bio.html">ABOUT</a>
+    <a href="Resume.html">RESUME</a>
+    <a href="Graphic Design.html">GRAPHIC DESIGN</a>
+    <a id="nav_projz" href="Projects.html">PROJECTS</a>
+    <a href="Games.html">GAMES</a>
+    <a id="nav_last" href="Contacts.html">CONTACT</a>
+</ul>
+
 <div id = "intro">
     <div id="text_wrap">
         <h1>FIRST Robotics</h1>
@@ -53,6 +68,7 @@
         <h1>Developed a <br>Course-correction<br> Algorithm</h1>
         <h2>It drives straight no<br>matter how you kick it.<br>The algorithm is deployed<br>with the help of an<br>onboard gyroscope.</h2>
     </div>
+    <img id="algo_gif" src="Images/auto_correct_gif_1.gif">
 </div>
 
 <div id="descrip">
@@ -75,7 +91,7 @@
     </div>
         <div style="margin-top: 3%">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/9hqpB1AoOpU" frameborder="0" allowfullscreen></iframe>
-            <iframe style="margin-left: 3%" width="560" height="315" src="https://www.youtube.com/embed/ZjXJVdk_eOc" frameborder="0" allowfullscreen></iframe>
+            <iframe id="if_sec" width="560" height="315" src="https://www.youtube.com/embed/ZjXJVdk_eOc" frameborder="0" allowfullscreen></iframe>
         </div>
 </div>
 
