Entire Website Including GFX Is Now Responsive

--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
     <script src="JS/jquery.js"></script>
     <script src="JS/common_jquery.js"></script>
     <script src="JS/gfx2_js.js"></script>
     <meta charset="utf-8">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>Graphic Design</title>
     <link rel="icon" href="Images/icon png.png">
     <link href="CSS/gfx2.css" rel="stylesheet" type="text/css" media="screen">
@@ -35,6 +35,20 @@
     </nav>
 </div>
 
+<div id="top_mobile_nav">
+    <img id="navicon" src="Images/navicon.png" height="50px" width="50px" >
+</div>
+
+<ul id="mobile_nav">
+    <a id="nav_fist" href="index.html">HOME</a>
+    <a href="Bio.html">ABOUT</a>
+    <a href="Resume.html">RESUME</a>
+    <a href="Graphic Design.html">GRAPHIC DESIGN</a>
+    <a id="nav_projz" href="Projects.html">PROJECTS</a>
+    <a href="Games.html">GAMES</a>
+    <a id="nav_last" href="Contacts.html">CONTACT</a>
+</ul>
+
 <div id="showcase"></div>
 
 <div id="work">
@@ -42,36 +56,42 @@
 </div>
 
 <div id="design">
+
+    <div id="behance_mobile">
+        <a href="https://www.behance.net/MrProLi">Behance Portfolio</a>
+    </div>
+    <div id="flickr_mobile">
+        <a href="https://www.flickr.com/photos/154270674@N02/">Flickr Profie</a>
+    </div>
+
     <div id="col1">
         <div id="img1" class="imgContainer">
-            <img src="Images/graphics1.jpg" height="280px" width="420px">
+            <img src="Images/graphics1.jpg">
             <a class="shadow" href="https://www.behance.net/gallery/47281675/2026-Time-Capsule">Featured Project <br /> 2026 Time Capsule</a>
         </div>
 
         <div id="img4" class="imgContainer">
-            <img src="Images/graphics3.jpg" height="630px" width="420px">
+            <img src="Images/graphics3.jpg">
             <a class="shadow" href="https://www.behance.net/gallery/47687973/Robotics-Recruitment-Poster">Robotics Poster</a>
         </div>
     </div>
     <div id="col2">
         <div id="img2" class="imgContainer">
-            <img src="Images/graphics2.jpg" height="420px" width="420px">
+            <img src="Images/graphics2.jpg">
             <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>Regular Art</a>
         </div>
 
         <div id="behance">
-            <img src="Images/beh.jpg" height="420px" width="420px">
             <a href="https://www.behance.net/MrProLi">Behance Portfolio</a>
         </div>
     </div>
     <div id="col3">
         <div id="img3" class="imgContainer">
-            <img src="Images/gfx2.png" height="390px" width="420px">
+            <img src="Images/gfx2.png">
             <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>2021 Class <br /> Stickers</a>
         </div>
 
         <div id="flickr">
-            <img src="Images/flk.jpg" height="420px" width="420px">
             <a href="https://www.flickr.com/photos/154270674@N02/">Flickr Profie</a>
         </div>
     </div>
