Projects personal-website description update

--- a/Projects.html
+++ b/Projects.html
@@ -57,7 +57,7 @@
     <div id="col1" style="text-align: left">
         <div id="col1_item1">
             <h2>Personal Website</h2>
-            <p>Personal website entirely coded from scratch using HTML, CSS, JavaScript, jQuery and more. In fact, you are viewing it right now. </p>
+            <p>Fully-responsive personal website entirely coded from scratch using HTML, CSS, JavaScript, jQuery and more. In fact, you are viewing it right now. </p>
             <a href="index.html">View project</a>
             <img src="Images/proj3.png">
         </div>
