Added Youtube to Index: Added Ability to display in 2*2 Grid

--- a/index.html
+++ b/index.html
@@ -78,21 +78,29 @@
     </div>
 </div>
 
-
 <div id="wrapper">
-    <div id="col1">
-        <div id="gfx" class="stylez">
-            <a href="Graphic%20Design.html">GRAPHIC DESIGN <br>PPORTFOLIO</a>
+    <div id="quad1">
+        <div id="col0">
+            <div id="yt">
+                <a href="https://www.youtube.com/watch?v=f778QbGu5vc">WATCH THE <br/>WEBSITE TRAILER</a>
+            </div>
+        </div>
+        <div id="col1">
+            <div id="gfx">
+                <a href="Graphic%20Design.html">GRAPHIC DESIGN <br>PPORTFOLIO</a>
+            </div>
         </div>
     </div>
-    <div id="col2">
-        <div id="proj" class="stylez">
-            <a href="Projects.html">FEATURED<br>PROJECTS</a>
+    <div id="quad2">
+        <div id="col2">
+            <div id="proj">
+                <a href="Projects.html">FEATURED<br>PROJECTS</a>
+            </div>
         </div>
-    </div>
-    <div id="col3">
-        <div id="resume" class="stylez">
-            <a href="Resume.html">DIGITAL<br>RESUME</a>
+        <div id="col3">
+            <div id="resume">
+                <a href="Resume.html">DIGITAL<br>RESUME</a>
+            </div>
         </div>
     </div>
 </div>
