No More Xtra Space in Index; Center Img Perfectly

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <a id="nav_last" href="Contacts.html">CONTACT</a>
 </ul>
 
-<div id="bg">
+<div id="bg" class="center_img">
     <img src="Images/cover_png2.png">
 </div>
 
@@ -87,7 +87,7 @@
         </div>
         <div id="col1">
             <div id="gfx">
-                <a href="Graphic%20Design.html">GRAPHIC DESIGN <br>PPORTFOLIO</a>
+                <a href="Graphic%20Design.html">GRAPHIC DESIGN <br>PORTFOLIO</a>
             </div>
         </div>
     </div>
